# makeUC2022

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.py  package-lock.json  package.json
.github/workflows/: rust.yml
.next/: trace
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: webpack.js
.next/static/webpack/: webpack.8a959bef478c1ad5.hot-update.js  webpack.e4dd6dcf71a8a956.hot-update.js  webpack.ef3cc383b1a5ff6a.hot-update.js
Arcata/: asgi.py  settings.py  urls.py  wsgi.py
api/: Cargo.toml
api/migrations/2022-10-22-232128_init/: up.sql
api/src/: crud.rs  main.rs  model.rs  schema.rs
arcata/: manage.py
arcata/app/: admin.py  models.py  urls.py  views.py
arcata/arcata/: asgi.py  settings.py  urls.py  wsgi.py
backend/: Cargo.toml  README.md  Rocket.toml  reference.md
backend/migrations/2022-10-23-002050_init/: up.sql
backend/migrations/2022-10-23-015705_init/: up.sql
backend/migrations/2022-10-23-074500_init/: down.sql  up.sql
backend/src/: crud.rs  main.rs  model.rs  schema.rs
components/: Firebase.jsx  Particles.jsx
components/Card/: Card.jsx
components/Form/: Form.jsx
components/Login/: Login.jsx  Login.module.css
components/Navbar/: Navbar.jsx  Navbar.module.css  nav_items.json
components/Splash/: Splash.module.css
components/Viewport/: Viewport.jsx  Viewport.module.css
firebase/: firebase.js
pages/: _document.js  dashboard.js  index.js
pages/api/: get_plant_info.js
public/: particles.json
styles/: Home.module.css  globals.css  themes.js
(+6 files in other folders)
