[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
diesel_cli = { version = "1.4.1", default-features = false, features = [
  "postgres",
] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = [
  "diesel_postgres_pool",
] }
serde = { version = "1.0.147", features = ["derive"] }
